@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - cluster count check and p4stage1 functions use new class
+   (npg_qc::illumina::interop::parser) to parse Illumina InterOp files
+
 release 57.6.0
  - only set p4 parameter values for markdup_method and
    markdup_optical_distance_value when do_target_alignment is true;
